@@ -49,8 +49,6 @@ R 2.12.0
         
 Syntactic sugar
 
-	o	binary operators for Rcomplex. http://comments.gmane.org/gmane.comp.lang.r.rcpp/649
-
     o	recycling : binary operators and math functions of 2 or more arguments
     need to recycle their arguments. 
     
